--- a/callTo/firstflaskarc/templates/next.html
+++ b/callTo/firstflaskarc/templates/next.html
@@ -7,5 +7,16 @@
 <body>
     <h1>Success!</h1>
     <h2>Welcome {{name}}!!</h2>
+    <form method="POST", action="">
+    <label for="club">Enter your Club Choice:</lable>
+    <select id="club" name="club">
+        <option value=""> </option>
+        <option value=""> </option> 
+        <option value=""> </option> 
+        <option value=""> </option>
+    </select>
+    <input type="submit" value="Submit">
+
+    </form>
 </body>
 </html>
