--- a/Ordinary/firstflaskarc/templates/main.html
+++ b/Ordinary/firstflaskarc/templates/main.html
@@ -6,7 +6,8 @@
     </head>
 
     <body>
-        <h1>Welcome to The Main Page {{name}}</h1> 
+        <h1>Welcome to The Main Page {{ name }}</h1> 
+        <a href="{{url_for('change', name=name)}}">Change the club</a>
     
     </body> 
 
