--- a/Ordinary/firstflaskarc/templates/next.html
+++ b/Ordinary/firstflaskarc/templates/next.html
@@ -6,14 +6,14 @@
 </head>
 <body>
     <h1>Success!</h1>
-    <h2>Welcome {{name}}!!</h2>
+    <h2>Welcome {{ name }}!!</h2>
     <form method="POST", action="">
-    <label for="club">Enter your Club Choice:</lable>
+    <label for="club">Enter your Club Choice:</label>
     <select id="club" name="club">
-        <option value=""> </option>
-        <option value=""> </option> 
-        <option value=""> </option> 
-        <option value=""> </option>
+        <option value="Writing">Writing</option>
+        <option value="Basketball">Basketball</option> 
+        <option value="Yoga">Yoga</option> 
+        <option value="Math">Math</option>
     </select>
     <input type="submit" value="Submit">
 
