more intro to flask here

--- a/Ordinary/firstflaskarc/templates/change.html
+++ b/Ordinary/firstflaskarc/templates/change.html
@@ -11,10 +11,10 @@
         <form method="POST", action="">
             <label for="club">Enter your Club Choice:</lable>
             <select id="club" name="club">
-                <option value="Writing"> </option>
-                <option value="Basketball"> </option> 
-                <option value="Yoga"> </option> 
-                <option value="Math"> </option>
+                <option value="Writing">Writing</option>
+                <option value="Basketball">Basketball</option> 
+                <option value="Yoga">Yoga</option> 
+                <option value="Math">Math</option>
             </select>
             <input type="submit" value="Submit">
         
