--- a/Ordinary/firstflaskarc/templates/index.html
+++ b/Ordinary/firstflaskarc/templates/index.html
@@ -5,11 +5,17 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Hello There!!</h1>
-    <form method="POST", action="">
-    <label for="name">Enter your name: </label>
-    <input type="text" id="name" name="name"/>
-    <input type="submit" value="Submit">
-    </form> 
+    <div class="top-index">
+        <h1>Hello There!!</h1>
+    </div>
+    <div class ="animated-element">
+        <form method="POST", action="">
+        <label for="name">Enter your name: </label>
+        <input type="text" id="name" name="name"/>
+        <input type="submit" value="Submit">
+        </form> 
+    </div> 
+    
+    
 </body>
 </html>
