--- a/Ordinary/firstflaskarc/templates/main.html
+++ b/Ordinary/firstflaskarc/templates/main.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Welcome to The Main Page {{ name }}</h1> 
-        <a href="{{url_for('change', name=name)}}">Change the club</a>
+        <a href="{{ url_for('change', name=name.lower()) }}">Change the club</a>
     
     </body> 
 
