--- a/Ordinary/firstflaskarc/templates/change.html
+++ b/Ordinary/firstflaskarc/templates/change.html
@@ -3,6 +3,7 @@
     <head>
         <title>Change</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+        <script src="{{ url_for('static', filename='script.js') }}"></script>
     </head>
 
     <body> 
