--- a/Ordinary/firstflaskarc/templates/index.html
+++ b/Ordinary/firstflaskarc/templates/index.html
@@ -3,13 +3,14 @@
 <head>
     <title>Beginning my Arc Now!</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </head>
 <body>
-    <div class="top-index">
+    <div class="index-top">
         <h1>Hello There!!</h1>
     </div>
-    <div class ="animated-element">
-        <form method="POST", action="">
+    <div class ="name-form">
+        <form method="POST" action="">
         <label for="name">Enter your name: </label>
         <input type="text" id="name" name="name"/>
         <input type="submit" value="Submit">
