--- a/Ordinary/firstflaskarc/templates/main.html
+++ b/Ordinary/firstflaskarc/templates/main.html
@@ -3,6 +3,7 @@
     <head>
         <title>Main page</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+        <script src="{{ url_for('static', filename='script.js') }}"></script>
     </head>
 
     <body>
