--- a/Ordinary/firstflaskarc/templates/next.html
+++ b/Ordinary/firstflaskarc/templates/next.html
@@ -3,6 +3,7 @@
 <head>
     <title>Success Page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </head>
 <body>
     <h1>Success!</h1>
