--- a/Ordinary/tictakto/public/styles.css
+++ b/Ordinary/tictakto/public/styles.css
@@ -6,7 +6,7 @@ body{
 
 .board {
     border-collapse: collapse;
-    margin: 20px auto;
+    margin: 10px auto;
 }
 
 .board td {
@@ -18,6 +18,7 @@ body{
     font-weight: bold;
     border: 4px solid #333;
     cursor: pointer;
+    caret-color: transparent;
 }
 
 .board td:hover {
@@ -55,12 +56,16 @@ body{
 /* Hover effect */
 .reset-button:hover {
     background-color: #2980b9;
-    animation: spin 1s infinite linear; 
+    animation: wiggle .22s infinite linear; 
 }
 
-@keyframes spin{
+@keyframes wiggle{
     0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    25% { transform: rotate(5deg); }
+    50% {transform: rotate(-5deg); }
+    75% {transform: rotate(-5deg); }
+    100% {transform: rotate(5deg); }
+
 }
 
 
