--- a/Ordinary/jsandflask/templates/index.html
+++ b/Ordinary/jsandflask/templates/index.html
@@ -1,4 +1,4 @@
-<!Doctype hmtl> 
+<!Doctype html> 
 <html> 
     <head>
         <title>JavaScript and Flask</title>
@@ -6,6 +6,9 @@
 
     </head> 
     <body> 
+        <div class="title-container" id="title-container">
+
+        </div>
 
 
         <script src="{{ url_for('static', filename='script.js') }}"></script>
