more js and flask

--- a/Ordinary/jsandflask/templates/index.html
+++ b/Ordinary/jsandflask/templates/index.html
@@ -6,10 +6,11 @@
 
     </head> 
     <body> 
-        <div class="title-container" id="title-container">
-
+        <div class="container" id="container">
+            <div class="title-container" id="title-container">
+                <h1 class="title" id="title">Welcome to my Application</h1> 
+            </div>
         </div>
-
 
         <script src="{{ url_for('static', filename='script.js') }}"></script>
     </body>
